--- a/wwwroot/css/alt/adminlte.extra-components.css
+++ b/wwwroot/css/alt/adminlte.extra-components.css
@@ -137,6 +137,10 @@
   width: 100%;
 }
 
+.info-box:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
 .info-box .progress {
   background-color: rgba(0, 0, 0, 0.125);
   height: 2px;
