--- a/Views/Inboxes/Send.cshtml
+++ b/Views/Inboxes/Send.cshtml
@@ -68,7 +68,7 @@
                 <div class="card-body">
                     <div class="table-responsive mailbox-messages">
 
-                        <table id="example1" class="table table-bordered table-striped">
+                        <table id="example1" class="table table-bordered table-striped table-hover">
 
                             <thead>
                                 <tr>
