--- a/Views/Tickets/Delete.cshtml
+++ b/Views/Tickets/Delete.cshtml
@@ -36,10 +36,16 @@
             @Html.DisplayFor(model => model.Updated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomUser)
+            @Html.DisplayNameFor(model => model.Developer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomUser.Id)
+            @Html.DisplayFor(model => model.Developer.Id)
+        </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Ownner)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Ownner.Id)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Project)
