--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -23,21 +23,18 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+
+            <input type="hidden" asp-for="Created" class="form-control" />
+
+
             <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
+                <label asp-for="DeveloperId" class="control-label"></label>
+                <select asp-for="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId"></select>
+                <span asp-validation-for="DeveloperId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Updated" class="control-label"></label>
-                <input asp-for="Updated" class="form-control" />
-                <span asp-validation-for="Updated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CustomUserId" class="control-label"></label>
-                <select asp-for="CustomUserId" class="form-control" asp-items="ViewBag.CustomUserId"></select>
-                <span asp-validation-for="CustomUserId" class="text-danger"></span>
-            </div>
+
+            <input type="hidden" asp-for="OwnnerId" class="form-control"/>
+
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label"></label>
                 <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
@@ -69,6 +66,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
