--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -74,3 +74,14 @@ body {
 #example1_filter {
     display: none;
 }
+#homeTable_filter {
+    display: none;
+}
+
+.info-box {
+    transition: 0.4s;
+}
+
+.info-box:hover {
+    box-shadow: 0 0 20px rgba(33,33,33,.4);
+}
